using UnityEngine;

namespace MagicalShooter.Characters.Players
{
    [CreateAssetMenu(fileName = "PlayerData", menuName = "MagicalShooter/PlayerData", order = 0)]
    public class PlayerData : CharacterData
    {

    }
}