using UnityEngine;

namespace MagicalShooter.Characters.Players
{
    public class PlayerView : CharacterView
    {

    }
}